@@ -2,6 +2,8 @@ package me.wilsonhu.ozzie.core.plugin;
 
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
+import me.wilsonhu.ozzie.Ozzie;
+import me.wilsonhu.ozzie.core.configuration.ConfigurationManager;
 import me.wilsonhu.ozzie.schemas.PluginSchema;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -10,9 +12,12 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.ArrayList;
+import java.util.Enumeration;
+import java.util.HashMap;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 
@@ -21,16 +26,18 @@ public class PluginLoader {
     private static final int SCHEMA_VERSION = 1;
     private static final Logger log = LogManager.getLogger(PluginLoader.class);
 
-    final ArrayList<Class<?>> pluginsRaw = new ArrayList<>();
+    final ArrayList<PluginModule> pluginsRaw = new ArrayList<PluginModule>();
     private File directory;
+    private Ozzie ozzie;
 
-    public PluginLoader(String dir) throws ClassNotFoundException, IOException{
-        this.setDirectory(new File(dir));
-        loadDirectory(dir);
+    public PluginLoader(String dir, Ozzie ozzie) throws ClassNotFoundException, IOException{
+        this.setDirectory(new File(dir + File.separator + "plugins"));
+        this.ozzie = ozzie;
+        loadDirectory(this.getDirectory().getAbsolutePath());
     }
 
-    public void addPlugin(Class<?> clazz) {
-        pluginsRaw.add(clazz);
+    public void addPlugin(PluginSchema schema, Class<?> clazz) {
+        pluginsRaw.add(new PluginModule(schema, clazz));
     }
 
     public void loadClassAndConfig(String dir) throws ClassNotFoundException, IOException {
@@ -45,9 +52,34 @@ public class PluginLoader {
             PluginSchema pluginSchema = new Gson().fromJson(br, new TypeToken<PluginSchema>(){}.getType());//Saved for future lang references v:
             if(pluginSchema.getSchemaVersion() == SCHEMA_VERSION){
                 Class<?> c = Class.forName(pluginSchema.getEntrypoint(), true, new URLClassLoader(new URL[]{dir.toURI().toURL()}));
-                addPlugin(c);
+                addPlugin(pluginSchema, c);
+                if(getOzzie().getI18nManager().getPluginLocalizationControl().containsKey(pluginSchema.getId())){
+                    if(!getOzzie().getI18nManager().getPluginLocalizationControl().get(pluginSchema.getId()).equals(pluginSchema.getVersion())) {
+                        getOzzie().getI18nManager().getPluginLocalizationControl().put(pluginSchema.getId(), pluginSchema.getVersion());
+                        loadLocale(jf, pluginSchema);
+                        getOzzie().getI18nManager().updateSavedSettings();
+                    }
+                }else{
+                    getOzzie().getI18nManager().getPluginLocalizationControl().put(pluginSchema.getId(), pluginSchema.getVersion());
+                    loadLocale(jf, pluginSchema);
+                    getOzzie().getI18nManager().updateSavedSettings();
+                }
             }else{
                 log.warn("{}: Incompatible schema version: {} current version: {} ", pluginSchema.getName(), pluginSchema.getSchemaVersion(), SCHEMA_VERSION);
+            }
+        }
+    }
+
+    public void loadLocale(JarFile jf, PluginSchema schema) throws IOException {
+        final Enumeration<JarEntry> entries = jf.entries();
+        while(entries.hasMoreElements()) {
+            final JarEntry entry = entries.nextElement();
+            final String name = entry.getName();
+            if (name.startsWith("locale/") && name.endsWith(".json")) {
+                final BufferedReader br = new BufferedReader(new InputStreamReader(jf.getInputStream(entry), "UTF-8"));
+                HashMap<String, String> locale = new Gson().fromJson(br, new TypeToken<HashMap<String, String>>(){}.getType());
+                String localeName = name.replaceAll("locale/", "").replaceAll(".json", "");
+                getOzzie().getConfigurationManager().writeJson(ConfigurationManager.LOCALE_FOLDER + File.separator + localeName, schema.getId(), locale);
             }
         }
     }
@@ -62,16 +94,16 @@ public class PluginLoader {
         }
     }
 
-    public ArrayList<Plugin> getConfiguredPlugins() throws InstantiationException, IllegalAccessException{
-        final ArrayList<Plugin> plugins = new ArrayList<Plugin>();
-        for (Class<?> key : pluginsRaw) {
-            plugins.add(initAsPlugin(key));
+    public ArrayList<PluginModule> getConfiguredPlugins() throws InstantiationException, IllegalAccessException, NoSuchMethodException, InvocationTargetException {
+        final ArrayList<PluginModule> plugins = new ArrayList<PluginModule>();
+        for (PluginModule pm: pluginsRaw) {
+            plugins.add(new PluginModule(initAsPlugin(pm.getClazz()), pm.getSchema(), pm.getClazz()));
         }
         return plugins;
     }
 
-    public Plugin initAsPlugin(Class<?> group) throws InstantiationException, IllegalAccessException {
-        Plugin plugin = (Plugin) group.newInstance();
+    public Plugin initAsPlugin(Class<?> group) throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
+        Plugin plugin = (Plugin) group.getDeclaredConstructor().newInstance();
         return plugin;
     }
 
@@ -81,5 +113,9 @@ public class PluginLoader {
 
     public void setDirectory(File directory) {
         this.directory = directory;
+    }
+
+    public Ozzie getOzzie(){
+        return ozzie;
     }
 }
